[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivaglint"
version = "0.1.1"
description = "Python toolkit for importing, validating, and analyzing Microsoft Viva Glint survey data exports."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Microsoft Corporation" },
]
keywords = ["viva glint", "survey", "analytics", "employee engagement", "microsoft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "rapidfuzz>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
# Factor analysis (extract_survey_factors) needs factor_analyzer.
factor = ["factor_analyzer>=0.4.0"]
# Plotting (plot=True on analysis functions).
plot = ["matplotlib>=3.4.0", "seaborn>=0.11.0"]
# Everything a user might want.
all = [
    "factor_analyzer>=0.4.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]
# Development / testing.
dev = [
    "pytest>=7.0.0",
    "responses>=0.22.0",
    "factor_analyzer>=0.4.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]
# Documentation (Sphinx).
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/vivaglint_py"
Repository = "https://github.com/microsoft/vivaglint_py"
Issues = "https://github.com/microsoft/vivaglint_py/issues"
"R package" = "https://github.com/microsoft/vivaglint"

[tool.setuptools]
packages = ["vivaglint"]

[tool.setuptools.package-data]
vivaglint = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
